fix spacing

--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -6,6 +6,7 @@
 }
 .bk-img-wrap {
     width: 40px;
+    margin-right:10px;
     align-items: center;
     display: flex;
 }
@@ -14,7 +15,7 @@
 }
 
 .checkout-payment-method .payment-method-title.bk-payment {
-    padding: 15px;
+    padding: 15px 0;
 }
 @media screen and (max-width: 480px) {
     .bk-payment-wrap {
@@ -22,6 +23,9 @@
     }
     .bk-img-wrap {
         margin-right: 10px;
+    }
+    .checkout-payment-method .payment-method-title.bk-payment {
+        padding: 15px;
     }
 }
 
